--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Study"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
+            android:exported="false"
+            android:label="@string/user_page"
             android:theme="@style/Theme.Study.NoActionBar">
+
+            <!-- added so it will go to this page after login screen-->
+            <intent-filter>
+                <action android:name="com.example.study.MainActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true"
+            android:label="@string/title_activity_login">
+            <!-- added this as the main page when the app is ran-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,9 +43,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
