--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,20 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".pomodoro"
+            android:exported="false"
+            android:label="@string/user_page"
+            android:theme="@style/Theme.Study.NoActionBar">
+
+
+            <intent-filter>
+                <action android:name="com.example.study.MainActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
 
         <activity
             android:name=".ui.login.LoginActivity"
