--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
 
             <intent-filter>
-                <action android:name="com.example.study.MainActivity" />
+                <action android:name="com.example.study.pomodoro" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
